--- a/index.html
+++ b/index.html
@@ -7,24 +7,45 @@
     <title>FullStackWebApp</title>
   </head>
   <body>
-    <ul>
-      <li>
-        <p>
-          React is being developed by Meta (formerly facebook)
-          <a href="https://opensource.fb.com/" target="_blank">(Source)</a>
-          <span>#technology#</span>
-        </p>
-      </li>
-      <li>
-        <p>
-          Millennial dads spend 3 times as much time with their kids than their
-          fathers spent with them. In 1982, 43% of fathers had never changed a
-          diaper. Today, that number is down to 3%
-          <a href="https://www.mother.ly/parenting/millennial-dads-spend-more-time-with-their-kids" target="_blank">(Source)</a>
-          <span>#society#</span>
-        </p>
-      </li>
-      <li></li>
-    </ul>
+    <!-------------------->
+    <!-- HEADER SECTION -->
+    <!-------------------->
+    <header>
+      <img
+        src="/img/logo.png"
+        alt="Today i Learned Logo"
+        height="68"
+        width="68"
+      />
+      <h1>Today I Learned</h1>
+    </header>
+
+    <!------------------>
+    <!-- MAIN SECTION -->
+    <!------------------>
+    <main>
+      <ul>
+        <li>
+          <p>
+            React is being developed by Meta (formerly facebook)
+            <a href="https://opensource.fb.com/" target="_blank">(Source)</a>
+            <span>#technology#</span>
+          </p>
+        </li>
+        <li>
+          <p>
+            Millennial dads spend 3 times as much time with their kids than
+            their fathers spent with them. In 1982, 43% of fathers had never
+            changed a diaper. Today, that number is down to 3%
+            <a
+              href="https://www.mother.ly/parenting/millennial-dads-spend-more-time-with-their-kids"
+              target="_blank"
+              >(Source)</a
+            >
+            <span>#society#</span>
+          </p>
+        </li>
+      </ul>
+    </main>
   </body>
 </html>
