--- a/index.html
+++ b/index.html
@@ -21,6 +21,26 @@
     </header>
 
     <!---------->
+    <!-- FORM -->
+    <!---------->
+    <form action="">
+      <input type="text" placeholder="Share a fact with the world..." />
+      <span>200</span>
+      <input type="text" placeholder="Trustworthy source..." />
+      <select name="" id="">
+        <option value="choose category">Choose category:</option>
+        <option value="technology">Technology</option>
+        <option value="science">Science</option>
+        <option value="finance">Finance</option>
+        <option value="society">Society</option>
+        <option value="entertainment">Entertainment</option>
+        <option value="health">Health</option>
+        <option value="history">History</option>
+        <option value="news">News</option>
+      </select>
+    </form>
+
+    <!---------->
     <!-- MAIN -->
     <!---------->
     <main>
@@ -62,17 +82,6 @@
               <span>#society#</span>
             </p>
           </li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
         </ul>
       </section>
     </main>
