--- a/index.html
+++ b/index.html
@@ -68,6 +68,11 @@
               <a href="https://opensource.fb.com/" target="_blank">(Source)</a>
               <span>#technology#</span>
             </p>
+            <div>
+              <button>👍 <strong>24</strong></button>
+              <button>🤯 <strong>9</strong></button>
+              <button>⛔️ <strong>4</strong></button>
+            </div>
           </li>
           <li>
             <p>
@@ -81,6 +86,11 @@
               >
               <span>#society#</span>
             </p>
+            <div>
+              <button>👍 <strong>11</strong></button>
+              <button>🤯 <strong>2</strong></button>
+              <button>⛔️ <strong>0</strong></button>
+            </div>
           </li>
         </ul>
       </section>
