--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <!---------->
     <!-- FORM -->
     <!---------->
-    <form action="">
+    <form class="fact-form" action="">
       <input type="text" placeholder="Share a fact with the world..." />
       <span>200</span>
       <input type="text" placeholder="Trustworthy source..." />
