Added the first part of content for the header-section

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!------------>
     <!-- HEADER -->
     <!------------>
-    <header>
+    <header class="header">
       <img
         src="/img/logo.png"
         alt="Today i Learned Logo"
@@ -24,6 +24,7 @@
         width="68"
       />
       <h1>Today I Learned</h1>
+      <button>Share a Fact</button>
     </header>
 
     <!---------->
