started working on the header-section

--- a/index.html
+++ b/index.html
@@ -17,13 +17,15 @@
     <!-- HEADER -->
     <!------------>
     <header class="header">
-      <img
-        src="/img/logo.png"
-        alt="Today i Learned Logo"
-        height="68"
-        width="68"
-      />
-      <h1>Today I Learned</h1>
+      <div class="logo">
+        <img
+          src="/img/logo.png"
+          alt="Today i Learned Logo"
+          height="68"
+          width="68"
+        />
+        <h1>Today I Learned</h1>
+      </div> 
       <button>Share a Fact</button>
     </header>
 
@@ -73,7 +75,7 @@
             <p class="fact">
               React is being developed by Meta (formerly facebook)
               <a href="https://opensource.fb.com/" target="_blank">(Source)</a>
-              <span class="tag">#technology#</span>
+              <span class="tag" style="background-color: #3b82f6;">#technology#</span>
             </p>
             <div>
               <button>👍 <strong>24</strong></button>
@@ -91,7 +93,7 @@
                 target="_blank"
                 >(Source)</a
               >
-              <span class="tag">#society#</span>
+              <span class="tag" style="background-color: #eab308;">#society#</span>
             </p>
             <div>
               <button>👍 <strong>11</strong></button>
