--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <title>FullStackWebApp</title>
   </head>
   <body>
-    <!------------>
-    <!-- HEADER -->
-    <!------------>
+    <!-------------------->
+    <!-- HEADER-SECTION -->
+    <!-------------------->
     <header class="header">
       <div class="logo">
         <img
@@ -29,9 +29,9 @@
       <button>Share a Fact</button>
     </header>
 
-    <!---------->
-    <!-- FORM -->
-    <!---------->
+    <!------------------>
+    <!-- FORM-SECTION -->
+    <!------------------>
     <form class="fact-form" action="">
       <input type="text" placeholder="Share a fact with the world..." />
       <span>200</span>
@@ -49,9 +49,9 @@
       </select>
     </form>
 
-    <!---------->
-    <!-- MAIN -->
-    <!---------->
+    <!------------------>
+    <!-- MAIN-SECTION -->
+    <!------------------>
     <main>
       <!-- ASIDE -->
       <aside>
@@ -67,8 +67,9 @@
           <li><button>News</button></li>
         </ul>
       </aside>
-
-      <!-- FIRST SECTION  -->
+      <!-------------------->
+      <!-- FACTS-SECTION  -->
+      <!-------------------->
       <section>
         <ul>
           <li>
