--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           width="68"
         />
         <h1>Today I Learned</h1>
-      </div> 
+      </div>
       <button>Share a Fact</button>
     </header>
 
@@ -72,20 +72,22 @@
       <!-------------------->
       <section>
         <ul>
-          <li>
-            <p class="fact">
+          <li class="fact">
+            <p>
               React is being developed by Meta (formerly facebook)
               <a href="https://opensource.fb.com/" target="_blank">(Source)</a>
-              <span class="tag" style="background-color: #3b82f6;">#technology#</span>
             </p>
-            <div>
+            <span class="tag" style="background-color: #3b82f6"
+              >#technology#</span
+            >
+            <div class="vote-buttons">
               <button>👍 <strong>24</strong></button>
               <button>🤯 <strong>9</strong></button>
               <button>⛔️ <strong>4</strong></button>
             </div>
           </li>
-          <li>
-            <p class="fact">
+          <li class="fact">
+            <p>
               Millennial dads spend 3 times as much time with their kids than
               their fathers spent with them. In 1982, 43% of fathers had never
               changed a diaper. Today, that number is down to 3%
@@ -94,9 +96,9 @@
                 target="_blank"
                 >(Source)</a
               >
-              <span class="tag" style="background-color: #eab308;">#society#</span>
             </p>
-            <div>
+            <span class="tag" style="background-color: #eab308">#society#</span>
+            <div class="vote-buttons">
               <button>👍 <strong>11</strong></button>
               <button>🤯 <strong>2</strong></button>
               <button>⛔️ <strong>0</strong></button>
