added grid to the main-section of the page and added a small gap

--- a/index.html
+++ b/index.html
@@ -52,8 +52,10 @@
     <!------------------>
     <!-- MAIN-SECTION -->
     <!------------------>
-    <main>
+    <main class="main">
+      <!----------->
       <!-- ASIDE -->
+      <!----------->
       <aside>
         <ul>
           <li><button>All</button></li>
