--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
           <img src="/img/logo.png" alt="Today i Learned Logo" />
           <h1>Today I Learned</h1>
         </div>
-        <button>Share a Fact</button>
+        <button class="btn">Share a Fact</button>
       </header>
 
       <!------------------>
       <!-- FORM-SECTION -->
       <!------------------>
-      <form class="fact-form" action="">
+      <form class="fact-form">
         <input type="text" placeholder="Share a fact with the world..." />
         <span>200</span>
         <input type="text" placeholder="Trustworthy source..." />
@@ -43,6 +43,7 @@
           <option value="history">History</option>
           <option value="news">News</option>
         </select>
+        <button class="btn btn-large">Post</button>
       </form>
 
       <!------------------>
@@ -54,15 +55,15 @@
         <!----------->
         <aside>
           <ul>
-            <li><button>All</button></li>
-            <li><button>Technology</button></li>
-            <li><button>Science</button></li>
-            <li><button>Finance</button></li>
-            <li><button>Society</button></li>
-            <li><button>Entertainment</button></li>
-            <li><button>Health</button></li>
-            <li><button>History</button></li>
-            <li><button>News</button></li>
+            <li><button class="btn">All</button></li>
+            <li><button class="btn">Technology</button></li>
+            <li><button class="btn">Science</button></li>
+            <li><button class="btn">Finance</button></li>
+            <li><button class="btn">Society</button></li>
+            <li><button class="btn">Entertainment</button></li>
+            <li><button class="btn">Health</button></li>
+            <li><button class="btn">History</button></li>
+            <li><button class="btn">News</button></li>
           </ul>
         </aside>
         <!-------------------->
