added the styling for the buttons and form/input

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <img src="/img/logo.png" alt="Today i Learned Logo" />
           <h1>Today I Learned</h1>
         </div>
-        <button class="btn">Share a Fact</button>
+        <button class="btn btn-large">Share a Fact</button>
       </header>
 
       <!------------------>
@@ -55,15 +55,73 @@
         <!----------->
         <aside>
           <ul>
-            <li><button class="btn">All</button></li>
-            <li><button class="btn">Technology</button></li>
-            <li><button class="btn">Science</button></li>
-            <li><button class="btn">Finance</button></li>
-            <li><button class="btn">Society</button></li>
-            <li><button class="btn">Entertainment</button></li>
-            <li><button class="btn">Health</button></li>
-            <li><button class="btn">History</button></li>
-            <li><button class="btn">News</button></li>
+            <li class="category">
+              <button class="btn btn-all-categories">All</button>
+            </li>
+            <li class="category">
+              <button
+                class="btn btn-category"
+                style="background-color: #3b82f6"
+              >
+                Technology
+              </button>
+            </li>
+            <li class="category">
+              <button
+                class="btn btn-category"
+                style="background-color: #16a34a"
+              >
+                Science
+              </button>
+            </li>
+            <li class="category">
+              <button
+                class="btn btn-category"
+                style="background-color: #ef4444"
+              >
+                Finance
+              </button>
+            </li>
+            <li class="category">
+              <button
+                class="btn btn-category"
+                style="background-color: #eab308"
+              >
+                Society
+              </button>
+            </li>
+            <li class="category">
+              <button
+                class="btn btn-category"
+                style="background-color: #db2777"
+              >
+                Entertainment
+              </button>
+            </li>
+            <li class="category">
+              <button
+                class="btn btn-category"
+                style="background-color: #14b8a6"
+              >
+                Health
+              </button>
+            </li>
+            <li class="category">
+              <button
+                class="btn btn-category"
+                style="background-color: #f97316"
+              >
+                History
+              </button>
+            </li>
+            <li class="category">
+              <button
+                class="btn btn-category"
+                style="background-color: #8b5cf6"
+              >
+                News
+              </button>
+            </li>
           </ul>
         </aside>
         <!-------------------->
@@ -85,9 +143,9 @@
                 >#technology#</span
               >
               <div class="vote-buttons">
-                <button>👍 <strong>24</strong></button>
-                <button>🤯 <strong>9</strong></button>
-                <button>⛔️ <strong>4</strong></button>
+                <button>👍 24</button>
+                <button>🤯 9</button>
+                <button>⛔️ 4</button>
               </div>
             </li>
             <li class="fact">
@@ -106,9 +164,9 @@
                 >#society#</span
               >
               <div class="vote-buttons">
-                <button>👍 <strong>11</strong></button>
-                <button>🤯 <strong>2</strong></button>
-                <button>⛔️ <strong>0</strong></button>
+                <button>👍 11</button>
+                <button>🤯 2<//button>
+                <button>⛔️ 0</button>
               </div>
             </li>
           </ul>
