--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
           <img src="/img/logo.png" alt="Today i Learned Logo" />
           <h1>Today I Learned</h1>
         </div>
-        <button class="btn btn-large">Share a Fact</button>
+        <button class="btn btn-large btn-open">Share a Fact</button>
       </header>
       <!------------------>
       <!-- FORM-SECTION -->
       <!------------------>
-      <form class="fact-form">
+      <form class="fact-form hidden">
         <input type="text" placeholder="Share a fact with the world..."/>
         <span>200</span>
         <input type="text" placeholder="Trustworthy source..." />
@@ -171,5 +171,6 @@
         </section>
       </main>
     </div>
+    <script src="/js/script.js"></script>
   </body>
 </html>
