--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <!-------------------->
       <header class="header">
         <div class="logo">
-          <img src="/img/logo.png" alt="Today i Learned Logo" />
+          <img src="img/logo.png" alt="Today i Learned Logo" />
           <h1>Today I Learned</h1>
         </div>
         <button class="btn btn-large btn-open">Share a Fact</button>
@@ -171,6 +171,6 @@
         </section>
       </main>
     </div>
-    <script src="/js/script.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
